<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/set_value1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_value"
        ></EditText>
    <EditText
        android:id="@+id/set_value2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_value"
        ></EditText>
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/result"></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/suma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/suma"
            ></Button>
        <Button
            android:id="@+id/roznica"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/roznica"
            ></Button>
        <Button
            android:id="@+id/iloczyn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/iloczyn"
            ></Button>
        <Button
            android:id="@+id/iloraz"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/iloraz"
            ></Button>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calculate_value"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate_value"

            ></Button>
        <Button
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_value"

            ></Button>

    </LinearLayout>
</LinearLayout>